[metadata]
name = broker
description = The infrastructure middleman.
long_description = file: README.md
long_description_content_type = text/markdown
author = Jacob J Callahan
author_email = jacob.callahan05@gmail.com
url = https://github.com/SatelliteQE/broker
license = GNU General Public License v3
keywords = broker, AnsibleTower
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
install_requires =
    awxkit
    click
    dynaconf<3.2.1
    logzero
    pyyaml
    setuptools
    ssh2-python
packages = find:
zip_safe = False

[options.extras_require]
test = pytest
setup =
    setuptools
    setuptools-scm
    wheel
    twine
docker =
    docker
    paramiko
podman = podman-py
beaker = beaker-client

[options.entry_points]
console_scripts =
    broker = broker.commands:cli

[flake8]
max-line-length = 110
